objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ATM_Agreement_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kiosk ATM Agreement Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Amusements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accel Amusements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Termination_Amendment_Signed_Date__c</fullName>
        <label>Accel Termination Amendment Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Physical_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Physical State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <label>Account State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acknowledgement_of_Master_Received_Date__c</fullName>
        <label>Acknowledgement of Master Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Signed_Date__c</fullName>
        <label>Addendum Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Type__c</fullName>
        <label>Addendum Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Buildout</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Terms</fullName>
                </value>
                <value>
                    <fullName>Auto Renewal Removal</fullName>
                </value>
                <value>
                    <fullName>Amusements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Auto_Renew_Date__c</fullName>
        <label>Agreement Auto-Renew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Auto_Renew_Length__c</fullName>
        <label>Agreement Auto Renew Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.05</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>0.08</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                    <isActive>false</isActive>
                    <label>60</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Auto_Renew_Window__c</fullName>
        <label>Agreement Auto Renew Window</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Based_On__c</fullName>
        <label>Agreement Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location Live Date</fullName>
                </value>
                <value>
                    <fullName>Agreement Signed Date</fullName>
                </value>
                <value>
                    <fullName>Addendum Date</fullName>
                </value>
                <value>
                    <fullName>From Current Term of Agreement</fullName>
                </value>
                <value>
                    <fullName>Collective Live Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Denied_Date__c</fullName>
        <label>Agreement Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <label>Agreement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Revisions__c</fullName>
        <label>Agreement Revisions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated Compliant TUA</fullName>
                </value>
                <value>
                    <fullName>Incorrect Legal Name</fullName>
                </value>
                <value>
                    <fullName>Incorrect Address</fullName>
                </value>
                <value>
                    <fullName>Incorrect Entity</fullName>
                </value>
                <value>
                    <fullName>Location Owner&apos;s Initials</fullName>
                </value>
                <value>
                    <fullName>Person Procuring TUA revision</fullName>
                </value>
                <value>
                    <fullName>Waiting for Liquor License</fullName>
                </value>
                <value>
                    <fullName>Hand written notes</fullName>
                </value>
                <value>
                    <fullName>Incorrect DBA Name</fullName>
                </value>
                <value>
                    <fullName>Incorrect Permit #</fullName>
                </value>
                <value>
                    <fullName>Counsel Review</fullName>
                </value>
                <value>
                    <fullName>Signed Prior to Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Date__c</fullName>
        <label>Agreement Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Termination_Date__c</fullName>
        <description>a value in this field prevents the auto renewal process to be triggered</description>
        <inlineHelpText>Only enter this information if the location has indicated they do not want to renew the agreement.
The Agreement Termination Date should be the end of the current active agreement.</inlineHelpText>
        <label>Agreement Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Terms_years__c</fullName>
        <label>Agreement Terms (years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Type_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>to replace current Agreement_Type__c field</description>
        <label>Agreement Type (Lookup)</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Agreement_Type__c.State__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_State__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Agreement_Type__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Version_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agreement Version (Lookup)</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Account_State__c</field>
                <operation>equals</operation>
                <valueField>Agreement_Version__c.State__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Agreement_Version__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Voided_Date__c</fullName>
        <label>Agreement Voided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Voided_Reason__c</fullName>
        <label>Agreement Voided Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Rejected the Location</fullName>
                </value>
                <value>
                    <fullName>Accel TUA lapsed without renewal</fullName>
                </value>
                <value>
                    <fullName>IGB Application Denied</fullName>
                </value>
                <value>
                    <fullName>IGB Denied Gaming License</fullName>
                </value>
                <value>
                    <fullName>IGB Denied Gaming License Renewal</fullName>
                </value>
                <value>
                    <fullName>IGB Revoked Gaming License</fullName>
                </value>
                <value>
                    <fullName>Location Did Not Renew Gaming License</fullName>
                </value>
                <value>
                    <fullName>Location Ineligible Due To School/Church/OTB  Distance</fullName>
                </value>
                <value>
                    <fullName>Location is in an opt-out area</fullName>
                </value>
                <value>
                    <fullName>Location is Out of Business</fullName>
                </value>
                <value>
                    <fullName>Location Lost Liquor License</fullName>
                </value>
                <value>
                    <fullName>Location No Longer Interested in Gaming</fullName>
                </value>
                <value>
                    <fullName>Location Signed with Another Operator</fullName>
                </value>
                <value>
                    <fullName>Location Signee Did Not Have Authority</fullName>
                </value>
                <value>
                    <fullName>Location was Denied Liquor License</fullName>
                </value>
                <value>
                    <fullName>Location Was Sold but TUA was Not Assigned</fullName>
                </value>
                <value>
                    <fullName>Rule 320 application timeline not met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Length__c</fullName>
        <label>Auto Renew Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause_of_Termination__c</fullName>
        <label>Cause of Termination</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Status__c</fullName>
        <label>Closed Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Original_Live_Date__c</fullName>
        <formula>Account.Original_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Original Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Original_Termination_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Original Termination Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_TUA_Expiration_Date_Validated__c</fullName>
        <label>Competitor TUA Expiration Date Validated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Termination_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Termination Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor TO Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Competitor)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Review_Status__c</fullName>
        <label>Compliance Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Review</fullName>
                    <default>true</default>
                    <label>Initial Review</label>
                </value>
                <value>
                    <fullName>Final Review</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Initial Review - default value</fullName>
                    <isActive>false</isActive>
                    <label>Initial Review - default value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Problem__c</fullName>
        <label>Contract Problem</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Percentage__c</fullName>
        <label>Customer Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DBA_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DBA Name Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (DBA Name Lookup)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Addendum_Uploaded_to_RTT_System__c</fullName>
        <label>Date Addendum Uploaded to DUS System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TUA_Extension_Uploaded_RTT_System__c</fullName>
        <label>Date TUA Extension Uploaded DUS System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TUA_Purchased__c</fullName>
        <label>Date Agreement Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TUA_Uploaded_to_RTT_System__c</fullName>
        <label>Date Agreement Uploaded to DUS System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Letter__c</fullName>
        <label>Date of Letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Not_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Not Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>please, leave the words &quot;end date&quot; in lower case so we can differentiate from the standard field with the same label</description>
        <label>Agreement end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Notice_Based_On__c</fullName>
        <label>Extension Notice Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement Signed Date</fullName>
                </value>
                <value>
                    <fullName>Current Term of Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Notice_Signed_Date__c</fullName>
        <label>Extension Notice Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ILCC_Percentage_of_Ownership__c</fullName>
        <label>ILCC Percentage of Ownership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Data_Fee__c</fullName>
        <label>Kiosk ATM Data Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Data_Plan__c</fullName>
        <label>Kiosk ATM Data Plan</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Live_Date__c</fullName>
        <label>Kiosk ATM Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Location_Commission__c</fullName>
        <label>Kiosk ATM Location Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Operator_Commission__c</fullName>
        <label>Kiosk ATM Operator Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Pictures_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kiosk ATM Pictures Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Status__c</fullName>
        <label>Kiosk ATM Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Missing Contract</fullName>
                </value>
                <value>
                    <fullName>Missing FEIN</fullName>
                </value>
                <value>
                    <fullName>Missing Contract/FEIN</fullName>
                </value>
                <value>
                    <fullName>No ATM</fullName>
                </value>
                <value>
                    <fullName>Pending ATM Turn-On</fullName>
                </value>
                <value>
                    <fullName>Pending NRT Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Submittal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Surcharge__c</fullName>
        <label>Kiosk ATM Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_TID__c</fullName>
        <label>Kiosk ATM TID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kiosk_Fee__c</fullName>
        <label>Kiosk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Length_of_Agreement_Days__c</fullName>
        <label>Length of Agreement (Days Live)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Agreement__c</fullName>
        <label>Length of Agreement</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Contract__c</fullName>
        <formula>IF( 
(Agreement_End_Date__c - StartDate) / 365 * 12 &lt; 1, 1, (Agreement_End_Date__c - StartDate) / 365 * 12
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Terms__c</fullName>
        <label>Length of Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Revenue_Share_Percentage__c</fullName>
        <label>Location Revenue Share Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Agreement_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Agreement Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Live_Date__c</fullName>
        <formula>Account.Original_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Post_License_TUA_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Post License TUA Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_TUA_Extension_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original TUA Extension Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_TUA_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original TUA Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_of_Revenue_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part of Revenue Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Ownership__c</fullName>
        <label>Percentage of Ownership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Person_Procuring_LOI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Procuring LOI</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Person Procuring LOI)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Procuring_TUA2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Procuring Agreement</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_TUA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post TUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Properly_Terminated__c</fullName>
        <label>Properly Terminated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchased_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchased From</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Purchased From</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Director_Region__c</fullName>
        <label>RM Director Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RM_Director_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager_Region__c</fullName>
        <label>Relationship Manager Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_Manager_Region</valueSetName>
        </valueSet>
    </fields>
</CustomObject>